# caduceus

./: .gitignore  CITATION.cff  README.md  batch_predict.py  caduceus_env.yml  config.json  config_tree.txt  extract_feats.py  model_config.json  pretrain.job  pyproject.toml  setup.cfg  setup_env.sh  train.py  train_msi.py  vep_embeddings.py  vep_svm.ipynb
caduceus/: configuration_caduceus.py  modeling_caduceus.py  modeling_rcps.py  tokenization_caduceus.py
caduceus/compat/: mamba.py
caduceus/tests/: test_modeling.py  test_rcps.py
configs/: config.yaml
configs/callbacks/: checkpoint.yaml
configs/dataset/: gue.yaml  phage.yaml  tcga.yaml
configs/model/: caduceus.yaml  hf_caduceus.yaml  mamba.yaml
finetuning_glrb/: README.md  finetune.sh  finetune_bulk_rna.py  finetune_cage.py  finetune_chromatin.py  finetune_regulatory_elements.py  finetune_variant_effect_OMIM.py  finetune_variant_effect_causal_eqtl.py  finetune_variant_effect_pathogenic_clinvar.py  main.py  utils.py
slurm_scripts/: dump_vep_embeddings.sh  run_batch_predict.sh  run_genomics_benchmark.sh  run_genomics_benchmark_cnn.sh  run_genomics_benchmark_hf.sh  run_gue.sh  run_nucleotide_transformer.sh  run_nucleotide_transformer_hf.sh  run_phage.sh  run_phage_cnn.sh  run_pretrain_caduceus.sh  run_pretrain_hyena.sh  run_pretrain_mamba.sh  wrapper_run_genomics.sh  wrapper_run_genomics_cnn.sh  wrapper_run_genomics_hf.sh  wrapper_run_gue.sh  wrapper_run_gue_cnn.sh  wrapper_run_nucleotide_transformer.sh  wrapper_run_nucleotide_transformer_hf.sh  wrapper_run_phage.sh  wrapper_run_phage_cnn.sh
(+45 files in other folders)
